--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,9 @@
     "@clerk/clerk-react": "^5.24.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.49.1",
     "@tanstack/react-query": "^5.66.5",
     "dotenv": "^16.4.7",
     "js-cookie": "^3.0.5",
