--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.14.0",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/gotrue-js": "^2.68.0",
     "@supabase/supabase-js": "^2.49.1",
     "@tanstack/react-query": "^5.66.5",
     "dotenv": "^16.4.7",
