--- a/server/package.json
+++ b/server/package.json
@@ -7,14 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cd src && node index.js",
     "dev": "cd src && nodemon index.js",
-    "build": "npm install && cd ../client && npm install && npm run build"
+    "dev-admin": "cd ../admin-dashboard && npm run build && cd ../server && nodemon index.js",
+    "build": "npm install && cd ../admin-dashboard && npm install && npm run build && cd ../client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@clerk/express": "^1.3.53",
     "@google/generative-ai": "^0.22.0",
     "@supabase/supabase-js": "^2.48.1",
     "cookie-parser": "^1.4.7",
@@ -24,7 +24,9 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "openai": "^4.85.1",
-    "svix": "^1.59.1"
+    "punycode": "^2.3.1",
+    "svix": "^1.59.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.9",
