Fix: Streamline build process and pass chatId when updating message reaction
This commit includes the following changes:

- Modified the build script in `server/package.json` to remove the admin-dashboard build step. This streamlines the build process by focusing solely on the client application.
- Updated the `updateMessageReaction` function in `client/src/utils/api.tsx` to include the `chatId` in the request body. This ensures that the server receives the necessary information to correctly update the message reaction.

--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "start": "cd src && node index.js",
     "dev": "cd src && nodemon index.js",
     "dev-admin": "cd ../admin-dashboard && npm run build && cd ../server && nodemon index.js",
-    "build": "npm install && cd ../admin-dashboard && npm install && npm run build && cd ../client && npm install && npm run build"
+    "build": "npm install && cd ../client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
