--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/genai": "^0.8.0",
     "@google/generative-ai": "^0.22.0",
     "@supabase/supabase-js": "^2.48.1",
     "cookie-parser": "^1.4.7",
