--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@google/genai": "^0.8.0",
     "@google/generative-ai": "^0.22.0",
     "@supabase/supabase-js": "^2.48.1",
+    "axios": "^1.8.4",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
