feat: Refactor project context, UI enhancements to be project-based and multiple themes and split a chat completion where the case  using 'gemini'
This commit introduces several key improvements:

- **Project Context Refactor:** Implemented a project context to manage the selected project and project-related data. This centralizes project management and simplifies data access across components.
- **UI Enhancements:**
  - Added a project selector dropdown to the dashboard sidebar, allowing users to switch between projects.
  - Implemented a "New Chat" button that creates a new chat within the currently selected project.
  - Improved the chat list to display chats associated with the selected project.
  - Added file explorer sidebar
- **API Integration:** Integrated new API endpoints for fetching projects, project files, and creating new projects.
- **Dependency Updates:** Updated dependencies, including `@supabase/supabase-js`, `@tanstack/react-query`, and axios.
- **Code Cleanup:** Removed unused components and files, such as the `agent` route and related files.
- **Theme Context:** Added theme context to manage the theme of the application
- **Keep Alive Service:** Added a keep alive service to prevent the server from sleeping

These changes enhance the user experience by providing a more organized and intuitive way to manage chats within different projects.

--- a/client/package.json
+++ b/client/package.json
@@ -13,26 +13,22 @@
     "buildPreviewExpose": "tsc -b && vite build && vite preview --host 0.0.0.0"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/gotrue-js": "^2.69.1",
+    "@supabase/supabase-js": "^2.50.1",
     "@tanstack/react-query": "^5.66.5",
-    "@types/js-cookie": "^3.0.6",
+    "axios": "^1.10.0",
     "dotenv": "^16.4.7",
-    "js-cookie": "^3.0.5",
     "lucide-react": "^0.479.0",
-    "openai": "^4.85.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.5",
-    "ui": "^0.2.4"
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
-    "@tanstack/eslint-plugin-query": "^5.66.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
