--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
+    "dev-prod": "cd src && NODE_ENV=production node index.js",
     "start": "cd src && node index.js",
     "dev": "cd src && nodemon index.js",
     "dev-admin": "cd ../admin-dashboard && npm run build && cd ../server && nodemon index.js",
@@ -15,23 +16,20 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@google/genai": "^0.8.0",
-    "@google/generative-ai": "^0.22.0",
     "@supabase/supabase-js": "^2.48.1",
-    "axios": "^1.8.4",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "openai": "^4.85.1",
-    "punycode": "^2.3.1",
-    "svix": "^1.59.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.9",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "supertest": "^7.1.0",
+    "vitest": "^3.1.3"
   }
 }
